# Galois

./: .gitignore  CMakeLists.txt
libgalois/include/galois/: DynamicBitset.h
libgalois/include/galois/graphs/: LC_CSR_Graph.h
lonestar/analytics/cpu/: CMakeLists.txt
lonestar/analytics/cpu/independentset/: IndependentSet.cpp
lonestar/analytics/cpu/skywalker/: CMakeLists.txt  cc.hpp  pr.hpp  skywalker.cpp  skywalker.h  sssp.hpp
lonestar/analytics/cpu/sssp/: SSSP.cpp
scripts/skywalker/: graph_sweep.sh  partitioning_sweep.sh
tools/graph-convert/: graph-convert.cpp
